<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:background="@color/color_6"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="7dp"
                    android:text="@string/english"
                    android:textAllCaps="true"
                    android:textColor="@color/color_2"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end">

                <ImageView
                    android:id="@+id/image_view_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/clear"
                    android:padding="7dp"
                    android:src="@drawable/ic_info" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/linear_layout_background_1"
            android:orientation="horizontal"
            android:padding="5dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="140dp">

                    <EditText
                        android:id="@+id/edit_text_english"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/color_3"
                        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789.,?'!/()&amp;:;=+-_$&quot;@ "
                        android:textColor="@color/color_7"
                        android:textSize="25sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/edit_text_english"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/image_view_clear"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:contentDescription="@string/clear"
                            android:padding="5dp"
                            android:src="@drawable/ic_clear" />

                        <ImageView
                            android:id="@+id/image_view_refresh"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:contentDescription="@string/enter"
                            android:padding="5dp"
                            android:src="@drawable/ic_refresh" />

                    </LinearLayout>
                </RelativeLayout>

            </ScrollView>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:padding="7dp"
            android:text="@string/morse_code"
            android:textAllCaps="true"
            android:textColor="@color/color_2"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/linear_layout_background_1"
            android:orientation="horizontal"
            android:padding="5dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/text_view_morse_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_7"
                    android:textSize="40sp" />

            </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/linear_layout_vibration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/linear_layout_background_selector_1"
                android:padding="20dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/vibration"
                    android:src="@drawable/ic_vibration" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout_tone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/linear_layout_background_selector_1"
                android:padding="20dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/volume_up"
                    android:src="@drawable/ic_tone" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout_flash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/linear_layout_background_selector_1"
                android:padding="20dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/highlight"
                    android:src="@drawable/ic_flash" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <com.example.morsecodeconverter.CustomKeyboard
        android:id="@+id/custom_keyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" />

</RelativeLayout>